objects/sumoapp__Payment__c.object
<CustomObject>
    <description>Object for storing payment transaction info</description>
    <fields>
        <fullName>sumoapp__AttendeeId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Attendee Id</label>
        <referenceTo>sumoapp__Attendee__c</referenceTo>
        <relationshipName>Payments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>sumoapp__AvailbleForRefundAmount__c</fullName>
        <label>Availble For Refund Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>sumoapp__CompdSeats__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Compd Seats</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>sumoapp__ConnectorType__c</fullName>
        <label>Connector Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>SUMO_STRIPE</fullName>
                    <label>Sumo Stripe Connector</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>sumoapp__ErrorDetails__c</fullName>
        <label>Error Details</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>sumoapp__ExpirationDate__c</fullName>
        <formula>CASE(sumoapp__PaymentResult__c, &apos;DRAFT&apos;, CreatedDate + 65/1440, null)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Expiration Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>sumoapp__InitialPayment__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Initial Payment</label>
        <referenceTo>sumoapp__Payment__c</referenceTo>
        <relationshipLabel>Refunds</relationshipLabel>
        <relationshipName>Refunds</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>sumoapp__ItemsCount__c</fullName>
        <label>Items Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>sumoapp__PaymentAmount__c</fullName>
        <label>Payment Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>sumoapp__PaymentConnectorId__c</fullName>
        <label>Payment Connector Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sumoapp__PaymentInfoUrl__c</fullName>
        <description>Link with Stripe (or another payment system) payment details.</description>
        <label>Payment Info Url</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>sumoapp__PaymentResult__c</fullName>
        <label>Payment Result</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>CANCELED</fullName>
                </value>
                <value>
                    <fullName>CANCELLED</fullName>
                    <label>Cancelled</label>
                </value>
                <value>
                    <fullName>DRAFT</fullName>
                </value>
                <value>
                    <fullName>FAILED</fullName>
                </value>
                <value>
                    <fullName>FULLY_PAID</fullName>
                    <label>FULLY PAID</label>
                </value>
                <value>
                    <fullName>FULLY_REFUNDED</fullName>
                    <label>FULLY REFUNDED</label>
                </value>
                <value>
                    <fullName>IN_PROCESS</fullName>
                    <label>IN PROCESS</label>
                </value>
                <value>
                    <fullName>PARTIALLY_PAID</fullName>
                    <label>PARTIALLY PAID</label>
                </value>
                <value>
                    <fullName>PARTIALLY_REFUNDED</fullName>
                    <label>PARTIALLY REFUNDED</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>sumoapp__PromoCode__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Promo Code</label>
        <referenceTo>sumoapp__PromoCode__c</referenceTo>
        <relationshipLabel>Payments</relationshipLabel>
        <relationshipName>Payments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>sumoapp__RefundNote__c</fullName>
        <label>Refund Note</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>sumoapp__RefundReason__c</fullName>
        <label>Refund Reason</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>CHANGED_MIND</fullName>
                    <label>Changed Mind</label>
                </value>
                <value>
                    <fullName>WRONG_CREDIT_CARD</fullName>
                    <label>Wrong Credit Card</label>
                </value>
                <value>
                    <fullName>PERSONAL_CONFLICT</fullName>
                    <label>Personal Conflict</label>
                </value>
                <value>
                    <fullName>OTHER</fullName>
                    <label>Other</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>sumoapp__TicketPrice__c</fullName>
        <label>Ticket Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>sumoapp__Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Payment</fullName>
                </value>
                <value>
                    <fullName>Refund</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>SUMO Payment</label>
    <nameField>
        <displayFormat>P-{000000}</displayFormat>
        <label>SUMO Payment Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Payments</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>